--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
 I will be crediting assets used in each theme. Please do not sell these or redistribute. This is meant to be accessible for everyone to use.
+
+These themes are meant for use for Cocoon Frontend: https://github.com/inssekt/CocoonFE
