--- a/Themes/Zenless Zone Zero - Hoshimi Miyabi/wallpapers/Readme
+++ b/Themes/Zenless Zone Zero - Hoshimi Miyabi/wallpapers/Readme
@@ -2,3 +2,5 @@ Placing assets here for where the theme.json needs to see.
 
 main.jpg for the top screen
 external.jpg for the bottom screen
+
+the external2.jpg blurrs the art a bit for the bottom to see better.
