--- a/Themes/Cinnamoroll - Akakura x Sanrio Theme/readme
+++ b/Themes/Cinnamoroll - Akakura x Sanrio Theme/readme
@@ -1,3 +1,3 @@
 Cinnamoroll Theme
-- Art by
+- Art by 赤倉＠画集発売中. Source: https://www.pixiv.net/en/artworks/98322323
 - icon assets made by UsagiShade
