--- a/Themes/Kuromi - Akakura x Sanrio Theme/readme
+++ b/Themes/Kuromi - Akakura x Sanrio Theme/readme
@@ -1,3 +1,3 @@
 Kuromi - Akakura x Sanrio Theme
 -Art by 赤倉＠画集発売中. Source: https://www.pixiv.net/en/artworks/98322323
-iiSU icon
+iiSU Dark Mode System Icon Overlay assets created by GiuPhoenix on Cocoon's Discord: https://discord.com/channels/1445504354563002429/1457536001093144697
